--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "firebase": "^12.6.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
